# QtQuickTemplate

./: CMakeLists.txt  CMakePresets.json  README.md
scripts/: create_project.ps1  create_project.sh
scripts/linux/: build_for_android.sh  build_for_linux.sh  deploy_to_android.sh  open_in_android_studio.sh
scripts/mac/: build_for_android.sh  deploy_to_android.sh  open_in_android_studio.sh
scripts/windows/: build_for_android.ps1  build_for_windows.ps1  deploy_to_android.ps1  open_in_android_studio.ps1
src/: CMakeLists.txt  main.cpp
src/android/: AndroidManifest.xml
src/qml/: Main.qml
